--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon-1.png">
-    <title>Instagram - log in or sign up</title>
+    <title>Facebook - log in or sign up</title>
 </head>
 <body class="bg-gray-100">
     <div class="container mt-48 flex mx-auto items-center justify-center">
         <div class="left w-1/3 mx-14">
             <img class="w-80" src="fb.svg" alt="">
-            <p class="text-3xl mx-8">Facebook helps you connect and share with the people in your life.</p>
+            <p class="text-3xl mx-8">Instagram helps you connect and share with the people in your life.</p>
         </div>
         <div class="right flex flex-col bg-white p-8 rounded-xl w-1/4 text-lg relative">
             <input class="px-4 h-12 my-2 border border-1 border-gray-200 rounded-lg outline-blue-200" type="text" placeholder="Email address or phone number">
