--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon-1.png">
-    <title>Facebook - log in or sign up</title>
+    <title>WhatsApp Register</title>
 </head>
 <body class="bg-gray-100">
     <div class="container mt-48 flex mx-auto items-center justify-center">
